Add initial linux support

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -37,6 +37,8 @@ jobs:
         include:
           - TARGET: aarch64-apple-darwin # tested on a mac, is not properly signed so there are security warnings
             OS: macos-latest
+          - TARGET: x86_64-unknown-linux-gnu
+            OS: ubuntu-latest
     needs: test
     runs-on: ${{ matrix.OS }}
     env:
@@ -60,7 +62,8 @@ jobs:
           # dependencies are only needed on ubuntu as that's the only place where
           # we make cross-compilation
           if [[ $OS =~ ^ubuntu.*$ ]]; then
-            sudo apt-get install -qq crossbuild-essential-arm64 crossbuild-essential-armhf libssl-dev
+            sudo apt update
+            sudo apt-get install -qq crossbuild-essential-arm64 crossbuild-essential-armhf libssl-dev pkg-config
           fi
 
           # some additional configuration for cross-compilation on linux
@@ -103,6 +106,6 @@ jobs:
       - name: Archive artifact
         uses: actions/upload-artifact@v4
         with:
-          name: result
+          name: ${{ env.NAME }}-${{ env.TARGET }}
           path: |
-            ./artifacts
+            ./artifacts/${{ env.NAME }}-${{ env.TARGET }}-*.tar.gz
